--- a/packages/bemlinter/__tests__/sources/cross-styling/leak.scss
+++ b/packages/bemlinter/__tests__/sources/cross-styling/leak.scss
@@ -1,11 +1,11 @@
-.c-block {
+.c-leak {
   display: block;
   position: absolute;
   z-index: 10;
   top: 50%;
   transform: translateY(-50%);
 
-  .c-other-block {
+  .c-external {
     display: none;
   }
 }
